@@ -42,8 +42,8 @@ public class DataGenerator {
             admin.setHashedPassword(passwordEncoder.encode("lazar"));
             admin.setProfilePictureUrl(
                     "https://images.unsplash.com/photo-1607746882042-944635dfe10e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=128&h=128&q=80");
-            admin.setRoles(Set.of(Role.USER, Role.ADMIN));
-//            admin.setRoles(Collections.singleton(Role.ADMIN));
+//            admin.setRoles(Set.of(Role.USER, Role.ADMIN));
+            admin.setRoles(Collections.singleton(Role.ADMIN));
             userRepository.save(admin);
 
             logger.info("Generated demo data");
